Tryin to figure out where the bug is in filling the squares with X and O

--- a/index.html
+++ b/index.html
@@ -8,7 +8,35 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <header>
+      <h1>TicTacToe</h1>  
+      <div class="scoreBoard">
+        <span>
+            <label id="plyr1">Player1's score:</label>
+            <h2 id="score1">0</h2>
+        </span>
+        <span>
+            <label id="plyr2">Player2's score:</label>
+            <h2 id="score2">0</h2>
+        </span> 
+    </div>
+    </header>
+    <main>
+       <div class="menu">
+            <h2>Insert the players' names</h2>
+            <span>
+                <label for="player1">Player 1: X</label>
+            </span>
+            <span>
+                <label for="player2">Player 2: O</label>
+            </span>
+            <button id="start">Start game</button>
+        </div>
+        <div class="container"></div>
+    </main>
+    <footer>
+        Made by Oliver - The Odin Project
+    </footer>
 </body>
 <script src="script.js"></script>
 </html>
