Solved some bugs, looking to check the winner and update the scoreboard

--- a/index.html
+++ b/index.html
@@ -9,21 +9,24 @@
 </head>
 <body>
     <header>
-      <h1>TicTacToe</h1>  
-      <div class="scoreBoard">
         <span>
-            <label id="plyr1">Player1's score:</label>
-            <h2 id="score1">0</h2>
+            <h1>TicTacToe</h1>
+            <button id="restart">Restart game</button>
         </span>
-        <span>
-            <label id="plyr2">Player2's score:</label>
-            <h2 id="score2">0</h2>
-        </span> 
-    </div>
+        <div class="scoreBoard">
+            <span>
+                <label id="plyr1">Player1's score:</label>
+                <h2 id="score1">0</h2>
+            </span>
+            <span>
+                <label id="plyr2">Player2's score:</label>
+                <h2 id="score2">0</h2>
+            </span> 
+        </div>
     </header>
     <main>
        <div class="menu">
-            <h2>Insert the players' names</h2>
+            <h2>Player marks:</h2>
             <span>
                 <label for="player1">Player 1: X</label>
             </span>
